Fixed Firefox scrollbar not hiding itself

--- a/src/components/Portfolio/Portfolio.module.css
+++ b/src/components/Portfolio/Portfolio.module.css
@@ -74,8 +74,15 @@
     }
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
 .portfolio .grid .container::-webkit-scrollbar {
     display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.portfolio .grid .container {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
 
 @media screen and (max-width: 850px) {
